--- a/sloth-demo/conf/sloth.properties
+++ b/sloth-demo/conf/sloth.properties
@@ -2,7 +2,7 @@
 
 # =====C1:configure of source===================================
 sloth.source=sc 
-sloth.sc.class=com.huawei.cube.sloth.perf.source.PerformanceSource
+sloth.sc.class=com.dm.cube.sloth.perf.source.PerformanceSource
 
 # =====C2:configure of work flows===============================
 sloth.wflows=perf
@@ -10,9 +10,9 @@ sloth.wflows=perf
 # =========C2.1:	f1 configure
 # =====----C2.1.1:	f1.handles----------------------------------
 sloth.perf.handles=filter,do
-sloth.perf.filter.class=com.huawei.cube.sloth.perf.filter.GatherMessageFilter
-sloth.perf.do.class=com.huawei.cube.sloth.perf.handle.GatherMessageHandle
+sloth.perf.filter.class=com.dm.cube.sloth.perf.filter.GatherMessageFilter
+sloth.perf.do.class=com.dm.cube.sloth.perf.handle.GatherMessageHandle
 # =====----C2.1.2:	f1.sink-------------------------------------
 sloth.perf.sink=sinkHbase
-sloth.perf.sinkHbase.class=com.huawei.cube.sloth.perf.sink.GatherResultSink
+sloth.perf.sinkHbase.class=com.dm.cube.sloth.perf.sink.GatherResultSink
 
