--- a/sloth-core/src/main/resources/sloth.properties
+++ b/sloth-core/src/main/resources/sloth.properties
@@ -2,7 +2,7 @@
 
 # =====C1:configure of source===================================
 sloth.source=sc 
-sloth.sc.class=com.huawei.sloth.demo.source.TestSource
+sloth.sc.class=com.dm.sloth.demo.source.TestSource
 sloth.sc.count=10
 
 
@@ -13,20 +13,20 @@ sloth.wflows=f1,f2
 # =========C2.1:	f1 configure
 # =====----C2.1.1:	f1.handles----------------------------------
 sloth.f1.handles=h1,h2,h3
-sloth.f1.h1.class=com.huawei.sloth.demo.handle.filter.MessageFilter1
-sloth.f1.h2.class=com.huawei.sloth.demo.handle.TestHandle
-sloth.f1.h3.class=com.huawei.sloth.demo.handle.TestHandle1
+sloth.f1.h1.class=com.dm.sloth.demo.handle.filter.MessageFilter1
+sloth.f1.h2.class=com.dm.sloth.demo.handle.TestHandle
+sloth.f1.h3.class=com.dm.sloth.demo.handle.TestHandle1
 # =====----C2.1.2:	f1.sink-------------------------------------
 sloth.f1.sink=sk
-sloth.f1.sk.class=com.huawei.sloth.demo.sink.TestSink
+sloth.f1.sk.class=com.dm.sloth.demo.sink.TestSink
 
 # =====----C2.2:	f2 configure
 # =====----C2.2.1:	f2.handles----------------------------------
 sloth.f2.handles=h1,h2,h3
-sloth.f2.h1.class=com.huawei.sloth.demo.handle.filter.MessageFilter2
-sloth.f2.h2.class=com.huawei.sloth.demo.handle.TestHandle
-sloth.f2.h3.class=com.huawei.sloth.demo.handle.TestHandle2
+sloth.f2.h1.class=com.dm.sloth.demo.handle.filter.MessageFilter2
+sloth.f2.h2.class=com.dm.sloth.demo.handle.TestHandle
+sloth.f2.h3.class=com.dm.sloth.demo.handle.TestHandle2
 # =====----C2.2.2:	f1.sink-------------------------------------
 sloth.f2.sink=sk
-sloth.f2.sk.class=com.huawei.sloth.demo.sink.TestSink
+sloth.f2.sk.class=com.dm.sloth.demo.sink.TestSink
 
